hphp/test/slow/parser/php-reserved-name-boolean-1.php.expectf
Fatal error: Cannot use 'Boolean' as class name as it is reserved in %s/php-reserved-name-boolean-1.php on line 6